--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "dotenv": "^8.2.0",
     "react": "^16.13.0",
-    "react-bootstrap": "^1.0.0-beta.17",
+    "react-autosuggest": "^10.0.2",
+    "react-bootstrap": "^1.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
